--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,12 +12,17 @@
   --sky-color: #e0f2fe;
   --indigo-background: #452179;
   --indigo-text-color: #452179;
-  --dark-grey:#1b1d29;
-  --dark-purple:#020109;
-  --dark-green:#051A1B;
+  --dark-grey: #1b1d29;
+  --dark-purple: #020109;
+  --dark-green: #051a1b;
+  --dark-brown: #241B1E;
 }
-
+.pretty {
+    text-wrap: pretty;
+    color: red;
+  }
 @layer utilities {
+
   .bg-green-gradient {
     height: 100%;
     width: 100%;
@@ -38,12 +43,12 @@
   .dark-bg {
     background-color: #1f2937;
   }
-  
+
   .paragraph {
     max-width: 600px;
     font-size: clamp(1.1rem, 1.4vw, 2.5rem);
   }
-  
+
   .dark-purple-article {
     color: #d4d4d4;
     background-color: var(--dark-purple);
@@ -55,6 +60,7 @@
   }
   .paragraph-w-600 {
     max-width: 600px;
+
     font-size: clamp(1.1rem, 1.4vw, 2.5rem);
   }
   .paragraph-w-600 a {
@@ -66,7 +72,7 @@
     max-width: 600px;
     font-size: clamp(1.1rem, 1.4vw, 2.5rem);
   }
-  
+
   .markdown-paragraph a {
     font-style: italic;
     font-weight: 500;
